# sphinx-autodoc-bmotif

./: CLAUDE.md  README.md  pyproject.toml
docs/: index.md  myst.yml
docs/source/: conf.py  index.rst
src/sphinx_autodoc_bmotif/: __init__.py  __main__.py  myst_plugin.py
