[project]
name = "sphinx-autodoc-bmotif"
version = "0.2.0"
description = "Generate documentation for BuildingMOTIF templates (Jupyter Book v2 / mystmd)"
readme = "README.md"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "buildingmotif[topquadrant]",
    "pydot>=3.0.2",
]

[project.scripts]
sphinx-autodoc-bmotif = "sphinx_autodoc_bmotif.__main__:main"
sphinx-autodoc-bmotif-plugin = "sphinx_autodoc_bmotif.myst_plugin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }
